# all-in-run

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
config/: __init__.py  constants.py  languages.py  settings.py
controllers/: __init__.py  input_controller.py  plan_controller.py  simulation_controller.py
docs/: INSTALLATION.md  UTILISATION.md
i18n/en/: calendar.json  common.json  input_page.json  plan_page.json  simulation_page.json
i18n/es/: calendar.json  common.json  input_page.json  plan_page.json  simulation_page.json
i18n/fr/: calendar.json  common.json  input_page.json  plan_page.json  simulation_page.json
models/: __init__.py  course.py  plan.py  session.py  user_data.py
services/: __init__.py  export_service.py  import_service.py  phase_calculator.py  plan_generator.py  preferences_service.py  session_distributor.py  volume_calculator.py
ui/: __init__.py
ui/components/: __init__.py  calendar.py  calendar_view.py  charts.py  drag_drop.py  export_sessions.py  export_settings.py  forms.py  responsive_layout.py  session_form.py  session_tags.py  statistics_view.py  tooltips.py
ui/pages/: __init__.py  input_page.py  plan_view_page.py  simulation_page.py
ui/static/css/: calendar.css  main.css
ui/utils/: style_loader.py
utils/: __init__.py  date_utils.py  i18n.py  pace_calculator.py  storage.py  time_converter.py  translations.py  validators.py
